--- a/ARCHITECTURE-20250809-215351.md
+++ b/ARCHITECTURE-20250809-215351.md
@@ -1,7 +1,7 @@
 # Project Architecture
 
 **Generated on:** 2025-08-09 21:53:51  
-**Root Directory:** `C:\TestSummarize`  
+**Root Directory:** `C:\Scripts\TestSummarize`  
 **Total Files:** 20  
 **Total Directories:** 3  
 **Text Files Analyzed:** 11  
